(issue 120) Added endpoint to delete all extras associated with annotation
