# project/views/annotation.py
@@ -2,7 +2,7 @@ from flask import Blueprint, jsonify, request
 
 from project.models.annotation import Annotation
 from project.schemas.annotation import AnnotationSchema
-from project.services.annotation_service import retrieve_annotation, change_annotation_values
+from project.services.annotation_service import retrieve_annotation, change_annotation_values, delete_extra_information
 
 REQUEST_API = Blueprint('annotations', __name__, url_prefix="/annotations")
 
@@ -32,3 +32,16 @@ def change_annotation(annotation_id):
     data.pop('project_id')
     change_annotation_values(annotation_id, data)
     return jsonify({'message': f'Successfully updated these settings: {data}'}), 200
+
+
+@REQUEST_API.route('/extra/<int:annotation_id>', methods=['DELETE'])
+def remove_annotation_extras(annotation_id):
+    result = delete_extra_information(annotation_id)
+
+    if result is None:
+        return jsonify({'error': 'Check the annotation ID.'}), 400
+
+    if result[0] == 0:
+        return jsonify({'message': f'No errors to delete'}), 200
+
+    return jsonify({'message': f'Deleted {result[1]} model and {result[2]} human error/errors.'}), 200
